# joystick2mqtt

./: CMakeLists.txt  Main.cpp  README.md  b.sh  deploy.sh  joystick2mqtt.json  joystick2mqtt.mk  joystick2mqtt.project  joystick2mqtt.service  joystick2mqtt.txt  workspace.code-workspace
doc/: .~lock.controls-update.odg#  architecture.pptx  controls-update.odg  ~$architecture.pptx
joystick2mqtt/: joystick2mqtt.mk  joystick2mqtt.project
joystick2mqtt/Debug/: joystick2mqtt
src/: Joystick.cpp  Joystick.h  Joystick2Mqtt.cpp  Joystick2Mqtt.h  LogFile.h  Main.cpp  Mqtt.cpp  Mqtt.h  joystick2mqtt.json  joystickRedis.cpp
